Fixed wrong index in or-select when empty option should be shown. Fixed deprecation of ST_Distance_Sphere Fixed deletion in JsonRulesBuilder when DELETE is requested when no value is present